--- a/clase-7/margin-and-padding/style.css
+++ b/clase-7/margin-and-padding/style.css
@@ -10,10 +10,13 @@ p{
     margin-bottom: 20px;
 }
 .margin-2{
-    margin-top: 50px; /* solapamiento de margin : toma el mayor*/
-    margin-left: 30px;
+     /* solapamiento de margin : toma el mayor*/
+    /* margin-top: 50px;
     margin-right: 70px;
     margin-bottom: 10px;
+    margin-left: 30px;
+     */
+    margin: 50px 70px 10px 30px;
 }
 .padding-1{
     padding: 10px;
@@ -21,7 +24,38 @@ p{
 }
 .padding-2{
     text-align: justify;
-    padding-top: 20px;
+   /*  padding-top: 20px;
+    padding-right: 20px;
     padding-bottom: 40px;
-    padding-left: 30px;
+    padding-left: 30px; */
+    padding: 20px 20px 40px 30px;
 }
+.border-1{
+    border: 1px solid red;
+}
+.border-2{
+    border-top: 2px solid blue;
+    border-bottom: 2px solid green;
+}
+.border-3{
+    border-top:10px dotted pink ;
+    border-bottom: 10px dashed magenta
+
+}
+.border-4{
+    border-style: groove;
+}
+/* .border-5{
+
+}
+.border-radius-1{
+
+}
+
+.border-radius-2{
+
+}
+
+.border-radius-3{
+
+} */
